--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
     <section class="input-section">
         <h2>Provide the following words:</h2>
         <div class="words">
-            <input class="input-box" type="text" ng-model="female_name" placeholder="female name" />
-            <input class="input-box" type="text" ng-model="job_title" placeholder="job title" />
-            <input class="input-box" type="text" ng-model="celebrity" placeholder="celebrity" />
-            <input class="input-box" type="text" ng-model="dirty task" placeholder="dirty task" />
-            <input class="input-box" type="text" ng-model="adjective" placeholder="adjective" />
-            <input class="input-box" type="text" ng-model="useless skill" placeholder="useless skill" />
-            <input class="input-box" type="text" ng-model="huge number" placeholder="huge number" />
-            <input class="input-box" type="text" ng-model="obnoxious celebrity" placeholder="obnoxious celebrity" />
+            <input class="input-box" type="text" ng-model="malename" ng-init="malename='male name'">
+            <input class="input-box" type="text" ng-model="femalename" ng-init="femalename='female name'" />
+            <input class="input-box" type="text" ng-model="jobtitle" ng-init="jobtitle='job title'" />
+            <input class="input-box" type="text" ng-model="celebrity" ng-init="celebrity='celebrity'" />
+            <input class="input-box" type="text" ng-model="dirtytask" ng-init="dirtytask='dirty task'" />
+            <input class="input-box" type="text" ng-model="adjective" ng-init="adjective='adjective'" />
+            <input class="input-box" type="text" ng-model="uselessskill" ng-init="uselessskill='useless skill'" />
+            <input class="input-box" type="text" ng-model="hugenumber" ng-init="hugenumber='huge number'" />
+            <input class="input-box" type="text" ng-model="obnoxiouscelebrity" ng-init="obnoxiouscelebrity='obnoxious celebrity'" />
         </div>
     </section>
     <section class="madlib">
         <div class="sentences">
-            <p>{{female_name}} was a {{job title}} who loved technology.</p>
-            <p>Although she loved parts of her job, she absolutely hated her co-worker, {{male_name}}, and {{dirty task}}.</p>
-            <p>So, {{female name}} met with her life mentor {{celebrity}} who told her to learn how to {{useless skill}} with Thinkful.</p>
-            <p>Thinkful didn't offer a course on {{useless skill}} so she studied programming instead.</p>
-            <p>What a great decision! With her new skills, {{female name}} built a(n) {{adjective}}</p>
-            <p>robot named {{obnoxiuous celebrity}} that not only loved {{dirty task}} but did it {{huge number}} times faster.</p>
+            <p><span>{{femalename}}</span> was a <span>{{jobtitle}}</span> who loved technology.</p>
+            <p>Although she loved parts of her job, she absolutely hated her co-worker, <span>{{malename}}</span>, and <span>{{dirtytask}}</span>.</p>
+            <p>So, <span>{{femalename}}</span> met with her life mentor <span>{{celebrity}}</span> who told her to learn <span>{{uselessskill}}</span> with Thinkful.</p>
+            <p>Thinkful didn't offer a course on <span>{{uselessskill}}</span> so she studied programming instead.</p>
+            <p>What a great decision! With her new skills, <span>{{femalename}}</span> built a(n) <span>{{adjective}}</span></p>
+            <p>robot named <span>{{obnoxiouscelebrity}}</span> that not only loved <span>{{dirtytask}}</span> but did it <span>{{hugenumber}}</span> times faster.</p>
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
-    <!--<script src="https://code.angularjs.org/1.3.10/angular.js"></script>
-    <script src="js/scripts.js"></script>-->
+    <!--<script src="js/scripts.js"></script>-->
 </body>
 
 </html>
