--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="">
+<html lang="en" ng-app="myApp" ng-controller="myCtrl">
 
 <head>
     <meta charset="UTF-8">
@@ -19,10 +19,18 @@
         </div>
     </section>
     <section class="input-section">
+        <div class="gender">
+            <h1>Please select a gender:</h1>
+            <input type="radio" ng-click="gender.pronoun='he';gender.poss='his'; gender.pronoun2='him'" name="gender" value="male" placeholder="">
+            <label for="gender"><span class="male">Male</span></label>
+            <input type="radio" ng-click="gender.pronoun='she';gender.poss='her'; gender.pronoun2='her'" name="gender" value="female" placeholder="">
+            <label for="gender"><span class="female">Female</span></label>
+        </div>
         <h2>Provide the following words:</h2>
+        <h4>( Be sure to fill out all the fields! )</h4>
         <div class="words">
-            <input class="input-box" type="text" ng-model="malename" ng-init="malename='male name'">
-            <input class="input-box" type="text" ng-model="femalename" ng-init="femalename='female name'" />
+            <input class="input-box" type="text" ng-model="name" ng-init="name='name'">
+            <input class="input-box" type="text" ng-model="name2" ng-init="name2='different name'" />
             <input class="input-box" type="text" ng-model="jobtitle" ng-init="jobtitle='job title'" />
             <input class="input-box" type="text" ng-model="celebrity" ng-init="celebrity='celebrity'" />
             <input class="input-box" type="text" ng-model="dirtytask" ng-init="dirtytask='dirty task'" />
@@ -32,18 +40,19 @@
             <input class="input-box" type="text" ng-model="obnoxiouscelebrity" ng-init="obnoxiouscelebrity='obnoxious celebrity'" />
         </div>
     </section>
+    <!-- Results Section -->
     <section class="madlib">
         <div class="sentences">
-            <p><span>{{femalename}}</span> was a <span>{{jobtitle}}</span> who loved technology.</p>
-            <p>Although she loved parts of her job, she absolutely hated her co-worker, <span>{{malename}}</span>, and <span>{{dirtytask}}</span>.</p>
-            <p>So, <span>{{femalename}}</span> met with her life mentor <span>{{celebrity}}</span> who told her to learn <span>{{uselessskill}}</span> with Thinkful.</p>
-            <p>Thinkful didn't offer a course on <span>{{uselessskill}}</span> so she studied programming instead.</p>
-            <p>What a great decision! With her new skills, <span>{{femalename}}</span> built a(n) <span>{{adjective}}</span></p>
+            <p><span>{{name}}</span> was a <span>{{jobtitle}}</span> who loved technology.</p>
+            <p>Although {{gender.pronoun}} loved parts of {{gender.poss}} job, {{gender.pronoun}} absolutely hated {{gender.poss}} co-worker, <span>{{name2}}</span>, and <span>{{dirtytask}}</span>.</p>
+            <p>So, <span>{{name}}</span> met with {{gender.poss}} life mentor <span>{{celebrity}}</span> who told {{gender.pronoun2}} to learn <span>{{uselessskill}}</span> with Thinkful.</p>
+            <p>Thinkful didn't offer a course on <span>{{uselessskill}}</span> so {{gender.pronoun}} studied programming instead.</p>
+            <p>What a great decision! With {{gender.poss}} new skills, <span>{{name}}</span> built a(n) <span>{{adjective}}</span></p>
             <p>robot named <span>{{obnoxiouscelebrity}}</span> that not only loved <span>{{dirtytask}}</span> but did it <span>{{hugenumber}}</span> times faster.</p>
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
-    <!--<script src="js/scripts.js"></script>-->
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
