--- a/index.html
+++ b/index.html
@@ -18,40 +18,108 @@
             <h1>Automate This!</h1>
         </div>
     </section>
-    <section class="input-section">
+    <section class="input-section" ng-hide="hideForm && madInput.$valid">
         <div class="gender">
             <h1>Please select a gender:</h1>
-            <input type="radio" ng-click="gender.pronoun='he';gender.poss='his'; gender.pronoun2='him'" name="gender" value="male" placeholder="">
+            <input type="radio" ng-click="gender.pronoun='he';gender.poss='his'; gender.pronoun2='him'" name="gender" value="male" checked="checked" placeholder="">
             <label for="gender"><span class="male">Male</span></label>
             <input type="radio" ng-click="gender.pronoun='she';gender.poss='her'; gender.pronoun2='her'" name="gender" value="female" placeholder="">
             <label for="gender"><span class="female">Female</span></label>
         </div>
         <h2>Provide the following words:</h2>
         <h4>( Be sure to fill out all the fields! )</h4>
-        <div class="words">
-            <input class="input-box" type="text" ng-model="name" ng-init="name='name'">
-            <input class="input-box" type="text" ng-model="name2" ng-init="name2='different name'" />
-            <input class="input-box" type="text" ng-model="jobtitle" ng-init="jobtitle='job title'" />
-            <input class="input-box" type="text" ng-model="celebrity" ng-init="celebrity='celebrity'" />
-            <input class="input-box" type="text" ng-model="dirtytask" ng-init="dirtytask='dirty task'" />
-            <input class="input-box" type="text" ng-model="adjective" ng-init="adjective='adjective'" />
-            <input class="input-box" type="text" ng-model="uselessskill" ng-init="uselessskill='useless skill'" />
-            <input class="input-box" type="text" ng-model="hugenumber" ng-init="hugenumber='huge number'" />
-            <input class="input-box" type="text" ng-model="obnoxiouscelebrity" ng-init="obnoxiouscelebrity='obnoxious celebrity'" />
-        </div>
+        <form name="madInput" ng-submit="submit()" novalidate>
+            <div class="words">
+                <div class="input-group">
+                    <input class="input-box" type="text" ng-model="input.name" name="name" placeholder="name" required>
+
+                    <!--</div>
+                <div class="input-group">-->
+                    <input class="input-box" type="text" ng-model="input.name2" name="name2" placeholder="different name" required/>
+
+                    <!--</div>
+                <div class="input-group">-->
+                    <input class="input-box" type="text" ng-model="input.jobtitle" name="jobtitle" placeholder="job title" required/>
+
+                    <!--</div>
+                <div class="input-group">-->
+                    <input class="input-box" type="text" ng-model="input.celebrity" name="celebrity" placeholder="celebrity" required/>
+
+                    <!--</div>
+                <div class="input-group">-->
+                    <input class="input-box" type="text" ng-model="input.dirtytask" name="dirtytask" placeholder="dirty task" required/>
+
+                    <!--</div>
+                <div class="input-group">-->
+                    <input class="input-box" type="text" ng-model="input.adjective" name="adjective" placeholder="adjective" required/>
+
+                    <!--</div>
+                <div class="input-group">-->
+                    <input class="input-box" type="text" ng-model="input.uselessskill" name="uselessskill" placeholder="useless skill" required/>
+
+                    <!--</div>
+                <div class="input-group">-->
+                    <input class="input-box" type="number" ng-model="input.hugenumber" name="hugenumber" placeholder="huge number" ng-pattern="\d" required/>
+
+                    <!--</div>
+                <div class="input-group">-->
+                    <input class="input-box" type="text" ng-model="input.obnoxiouscelebrity" name="obnoxiouscelebrity" placeholder="obnoxious celebrity" required/>
+
+                </div>
+            </div>
+            <hr size=7>
+            <div class="errorMessages">
+                <div class="errorMsg" ng-if="madInput.name.$touched" ng-messages="madInput.name.$error">
+                    <div ng-message="required">Don't forget to enter a name</div>
+                </div>
+                <div class="errorMsg" ng-if="madInput.name2.$touched" ng-messages="madInput.name2.$error">
+                    <div ng-message="required">Don't forget to enter a name</div>
+                </div>
+                <div class="errorMsg" ng-if="madInput.jobtitle.$touched" ng-messages="madInput.jobtitle.$error">
+                    <div ng-message="required">Don't forget to enter a job title</div>
+                </div>
+                <div class="errorMsg" ng-if="madInput.celebrity.$touched" ng-messages="madInput.celebrity.$error">
+                    <div ng-message="required">Don't forget to enter a celebrity</div>
+                </div>
+                <div class="errorMsg" ng-if="madInput.dirtytask.$touched" ng-messages="madInput.dirtytask.$error">
+                    <div ng-message="required">Don't forget to enter a dirty task</div>
+                </div>
+                <div class="errorMsg" ng-if="madInput.adjective.$touched" ng-messages="madInput.adjective.$error">
+                    <div ng-message="required">Don't forget to enter an adjective</div>
+                </div>
+                <div class="errorMsg" ng-if="madInput.uselessskill.$touched" ng-messages="madInput.uselessskill.$error">
+                    <div ng-message="required">Don't forget to enter a useless skill</div>
+                </div>
+                <div class="errorMsg" ng-if="madInput.hugenumber.$touched" ng-messages="madInput.hugenumber.$error">
+                    <div ng-message="required">Don't forget to enter a huge number</div>
+                    <div ng-message="pattern">Sorry, but you must enter a number</div>
+                </div>
+                <div class="errorMsg" ng-if="madInput.obnoxiouscelebrity.$touched" ng-messages="madInput.obnoxiouscelebrity.$error">
+                    <div ng-message="required">Don't forget to enter an obnoxious celebrity</div>
+                </div>
+            </div>
+            <div class="button-class">
+                <button class="button" type="submit">Generate My MadLib</button>
+            </div>
+        </form>
     </section>
     <!-- Results Section -->
-    <section class="madlib">
+    <section class="madlib" ng-show="hideForm && madInput.$valid">
         <div class="sentences">
-            <p><span>{{name}}</span> was a <span>{{jobtitle}}</span> who loved technology.</p>
+            <p><span>{{input.name | uppercase}}</span> was a <span>{{input.jobtitle}}</span> who loved technology. Although {{gender.pronoun}} loved parts of {{gender.poss}} job, {{gender.pronoun}} absolutely hated {{gender.poss}} co-worker, <span>{{input.name2 | uppercase}}</span>, and <span>{{input.dirtytask}}</span>. So, <span>{{input.name | uppercase}}</span> met with {{gender.poss}} life mentor <span>{{input.celebrity | uppercase}}</span> who told {{gender.pronoun2}} to learn <span>{{input.uselessskill}}</span> with Thinkful. Thinkful didn't offer a course on <span>{{input.uselessskill}}</span> so {{gender.pronoun}} studied programming instead. What a great decision! With {{gender.poss}} new skills, <span>{{input.name | uppercase}}</span> built a(n) <span>{{input.adjective}}</span> robot named <span>{{input.obnoxiouscelebrity | uppercase}}</span> that not only loved <span>{{input.dirtytask}}</span> but did it <span>{{input.hugenumber}}</span> times faster!</p>
+            <!--<p><span>{{name}}</span> was a <span>{{jobtitle}}</span> who loved technology.</p>
             <p>Although {{gender.pronoun}} loved parts of {{gender.poss}} job, {{gender.pronoun}} absolutely hated {{gender.poss}} co-worker, <span>{{name2}}</span>, and <span>{{dirtytask}}</span>.</p>
             <p>So, <span>{{name}}</span> met with {{gender.poss}} life mentor <span>{{celebrity}}</span> who told {{gender.pronoun2}} to learn <span>{{uselessskill}}</span> with Thinkful.</p>
             <p>Thinkful didn't offer a course on <span>{{uselessskill}}</span> so {{gender.pronoun}} studied programming instead.</p>
             <p>What a great decision! With {{gender.poss}} new skills, <span>{{name}}</span> built a(n) <span>{{adjective}}</span></p>
-            <p>robot named <span>{{obnoxiouscelebrity}}</span> that not only loved <span>{{dirtytask}}</span> but did it <span>{{hugenumber}}</span> times faster.</p>
+            <p>robot named <span>{{obnoxiouscelebrity}}</span> that not only loved <span>{{dirtytask}}</span> but did it <span>{{hugenumber}}</span> times faster.</p>-->
+        </div>
+        <div class="button-class">
+            <button class="button" type="submit" ng-click="reset()">Start Over</button>
         </div>
     </section>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
+    <script src='https://code.angularjs.org/1.5.5/angular-messages.min.js' type="text/javascript"></script>
     <script src="js/scripts.js"></script>
 </body>
 
