--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Anuglar Mad Libs</title>
+    <title>Angular Mad Libs</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans|Pontano+Sans' rel='stylesheet' type='text/css'>
 </head>
@@ -33,36 +33,20 @@
                 <div class="input-group">
                     <input class="input-box" type="text" ng-model="input.name" name="name" placeholder="name" required>
 
-                    <!--</div>
-                <div class="input-group">-->
                     <input class="input-box" type="text" ng-model="input.name2" name="name2" placeholder="different name" required/>
 
-                    <!--</div>
-                <div class="input-group">-->
                     <input class="input-box" type="text" ng-model="input.jobtitle" name="jobtitle" placeholder="job title" required/>
 
-                    <!--</div>
-                <div class="input-group">-->
                     <input class="input-box" type="text" ng-model="input.celebrity" name="celebrity" placeholder="celebrity" required/>
 
-                    <!--</div>
-                <div class="input-group">-->
                     <input class="input-box" type="text" ng-model="input.dirtytask" name="dirtytask" placeholder="dirty task" required/>
 
-                    <!--</div>
-                <div class="input-group">-->
                     <input class="input-box" type="text" ng-model="input.adjective" name="adjective" placeholder="adjective" required/>
 
-                    <!--</div>
-                <div class="input-group">-->
                     <input class="input-box" type="text" ng-model="input.uselessskill" name="uselessskill" placeholder="useless skill" required/>
 
-                    <!--</div>
-                <div class="input-group">-->
                     <input class="input-box" type="number" ng-model="input.hugenumber" name="hugenumber" placeholder="huge number" ng-pattern="\d" required/>
 
-                    <!--</div>
-                <div class="input-group">-->
                     <input class="input-box" type="text" ng-model="input.obnoxiouscelebrity" name="obnoxiouscelebrity" placeholder="obnoxious celebrity" required/>
 
                 </div>
@@ -99,7 +83,7 @@
                 </div>
             </div>
             <div class="button-class">
-                <button class="button" type="submit">Generate My MadLib</button>
+                <button class="button" type="submit" ng-click="show=!show">Generate My MadLib</button>
             </div>
         </form>
     </section>
@@ -107,19 +91,17 @@
     <section class="madlib" ng-show="hideForm && madInput.$valid">
         <div class="sentences">
             <p><span>{{input.name | uppercase}}</span> was a <span>{{input.jobtitle}}</span> who loved technology. Although {{gender.pronoun}} loved parts of {{gender.poss}} job, {{gender.pronoun}} absolutely hated {{gender.poss}} co-worker, <span>{{input.name2 | uppercase}}</span>, and <span>{{input.dirtytask}}</span>. So, <span>{{input.name | uppercase}}</span> met with {{gender.poss}} life mentor <span>{{input.celebrity | uppercase}}</span> who told {{gender.pronoun2}} to learn <span>{{input.uselessskill}}</span> with Thinkful. Thinkful didn't offer a course on <span>{{input.uselessskill}}</span> so {{gender.pronoun}} studied programming instead. What a great decision! With {{gender.poss}} new skills, <span>{{input.name | uppercase}}</span> built a(n) <span>{{input.adjective}}</span> robot named <span>{{input.obnoxiouscelebrity | uppercase}}</span> that not only loved <span>{{input.dirtytask}}</span> but did it <span>{{input.hugenumber}}</span> times faster!</p>
-            <!--<p><span>{{name}}</span> was a <span>{{jobtitle}}</span> who loved technology.</p>
-            <p>Although {{gender.pronoun}} loved parts of {{gender.poss}} job, {{gender.pronoun}} absolutely hated {{gender.poss}} co-worker, <span>{{name2}}</span>, and <span>{{dirtytask}}</span>.</p>
-            <p>So, <span>{{name}}</span> met with {{gender.poss}} life mentor <span>{{celebrity}}</span> who told {{gender.pronoun2}} to learn <span>{{uselessskill}}</span> with Thinkful.</p>
-            <p>Thinkful didn't offer a course on <span>{{uselessskill}}</span> so {{gender.pronoun}} studied programming instead.</p>
-            <p>What a great decision! With {{gender.poss}} new skills, <span>{{name}}</span> built a(n) <span>{{adjective}}</span></p>
-            <p>robot named <span>{{obnoxiouscelebrity}}</span> that not only loved <span>{{dirtytask}}</span> but did it <span>{{hugenumber}}</span> times faster.</p>-->
         </div>
         <div class="button-class">
             <button class="button" type="submit" ng-click="reset()">Start Over</button>
         </div>
     </section>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>
     <script src='https://code.angularjs.org/1.5.5/angular-messages.min.js' type="text/javascript"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.2.18/angular-animate.min.js"></script>-->
+    <script src="https://code.angularjs.org/1.5.5/angular.min.js" type="text/javascript"></script>
+    <script src='https://code.angularjs.org/1.5.5/angular-messages.min.js' type="text/javascript"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-animate.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
